--- a/thirdDime/static/js/question/question2.modal.html
+++ b/thirdDime/static/js/question/question2.modal.html
@@ -11,6 +11,13 @@
         <div layout="row" layout-align="end center" style="font-size: .77em;">Click on picture once to select.</div>
         <div layout="row" layout-align="center center">
         	<img style="margin: 10px; max-width: 100%;" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer2('Drapes')">
+            <div flex="20" >
+                <md-radio-group >
+                    <md-radio-button value="Girl in front" aria-label="Label 1" ng-click="answer2('Girl')">Girl in front</md-radio-button>
+                    <md-radio-button value="Drapes" aria-label="Label 2" ng-click="answer2('Drapes')"> Drapes </md-radio-button>
+                    <md-radio-button value="Man in center" aria-label="Label 3" ng-click="answer2('Man')">Man in center</md-radio-button>
+                </md-radio-group>       
+            </div>
         </div>
     </md-content>
 </md-dialog>
