--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -10,7 +10,7 @@
     	</md-subheader>
         <div layout="row" layout-align="end left" style="font-size: .77em;">Choose from options below.</div>
         <div layout="row" layout-align="end center" >
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('cypress')">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" >
             <div flex="20" >
                 <md-radio-group >
                     <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
