Adding percentage to Question 3 and 7 funda page.

--- a/thirdDime/static/js/funda/funda3.modal.html
+++ b/thirdDime/static/js/funda/funda3.modal.html
@@ -8,13 +8,13 @@
 					<h4>Dali is considering the relationship between the universe as seen through Einstein, the subconscious state, as depicted through Freud, put together with the surrealist perspective of the world. 
 	Now let’s see what the others had to say about it -
 					</h4>
-						<h5>Death and Decay</h5>
+						<h5>Death and Decay ({{vote31}}%)</h5>
 						<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote31"></md-progress-linear>
-						<h5>Relavity's idea of time</h5>
+						<h5>Relavity's idea of time ({{vote32}}%)</h5>
 						<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote32"></md-progress-linear>
-						<h5>Dream state</h5>
+						<h5>Dream state ({{vote33}}%)</h5>
 						<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote33"></md-progress-linear>
-						<h5>Fluidity of time</h5>
+						<h5>Fluidity of time ({{vote34}}%)</h5>
 						<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote34"></md-progress-linear>
 				</span>
 				<span flex="15"></i></span>
