--- a/thirdDime/static/js/funda/funda7.modal.html
+++ b/thirdDime/static/js/funda/funda7.modal.html
@@ -7,14 +7,14 @@
 				<span flex="70">
 					<h4>As we can see here the same story can be told in several ways. Every artist brings something unique to the narrative, an element that resonated with him the most. And it is this element that bears the watermark of the artist’s creation. 
 					</h4>
-					<h5>By Anthony van Dyck</h5>
-					<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote31"></md-progress-linear>
-					<h5>By Sebastiano Conca</h5>
-					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote32"></md-progress-linear>
-					<h5>By Nicolas Poussin</h5>
-					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote33"></md-progress-linear>
-					<h5>By Michele Desubleo</h5>
-					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote34"></md-progress-linear>
+					<h5>By Anthony van Dyck ({{vote71}}%)</h5>
+					<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote71"></md-progress-linear>
+					<h5>By Sebastiano Conca ({{vote72}}%)</h5>
+					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote72"></md-progress-linear>
+					<h5>By Nicolas Poussin ({{vote73}}%)</h5>
+					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote73"></md-progress-linear>
+					<h5>By Michele Desubleo ({{vote74}}%)</h5>
+					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote74"></md-progress-linear>
 				</span>
 				<span flex="15"></i></span>
 			</div>
