--- a/thirdDime/static/js/question/question5.modal.html
+++ b/thirdDime/static/js/question/question5.modal.html
@@ -8,7 +8,7 @@
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Click on picture once to select.</div>
+        <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from the options below</div>
         <div layout="row" layout-align="center center" >
         	<img style="margin: 10px; max-width: 100%;" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
             <div flex="20" >
