--- a/thirdDime/static/js/funda/funda1.modal.html
+++ b/thirdDime/static/js/funda/funda1.modal.html
@@ -1,8 +1,8 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
+	<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
-		<br/>
-		<br/>
+		<br>
+		<br>
 		<div layout="row" layout-align="center center">
 			<div ng-show="result"> <h1>CORRECT !</h1></div>
 			<div ng-hide="result"> <h1>It is the Cypress tree</h1></div>
@@ -16,7 +16,7 @@
 			<span flex="70">
 				Renaissance artists used symbolic objects to communicate with an audience that was largely illiterate. During the Victorian era, the cypress with its dark branches and tall columnar shape was a symbol of the cemetery and death and was widely planted in European as well as Middle Eastern graveyards. In the ‘Starry Night’ Van Gogh invoked the above symbolism.
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
