--- a/thirdDime/static/js/funda/funda3.modal.html
+++ b/thirdDime/static/js/funda/funda3.modal.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
 	<div ng-controller="DaliController">
-		<md-content style="background-color: {{color}}; color: white;">
+		<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
 			<div layout="row" layout-align="center center">
 				<span flex="15"></span>
@@ -17,7 +17,7 @@
 						<h5>Fluidity of time ({{vote34}}%)</h5>
 						<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote34"></md-progress-linear>
 				</span>
-				<span flex="15"></i></span>
+				<span flex="15"></span>
 			</div>
 		</md-content>
 		<div class="md-actions" layout="row">
@@ -26,4 +26,4 @@
 		    </md-button>
 	    </div>
 	</div>
-</md-dialog> 
+</md-dialog>
