--- a/thirdDime/static/js/funda/funda7.modal.html
+++ b/thirdDime/static/js/funda/funda7.modal.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
  	<div ng-controller="ArmidaController">
-		<md-content style="background-color: {{color}}; color: white;">
+		<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
 			<div layout="row" layout-align="center center">
 				<span flex="15"></span>
@@ -16,7 +16,7 @@
 					<h5>By Michele Desubleo ({{vote74}}%)</h5>
 					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote74"></md-progress-linear>
 				</span>
-				<span flex="15"></i></span>
+				<span flex="15"></span>
 			</div>
 		</md-content>
 		<div class="md-actions" layout="row">
@@ -25,4 +25,4 @@
 		    </md-button>
 	    </div>
 	</div>
-	</md-dialog> 
+	</md-dialog>
