--- a/thirdDime/static/js/funda/funda8.modal.html
+++ b/thirdDime/static/js/funda/funda8.modal.html
@@ -1,8 +1,8 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
+	<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
-		<br/>
-		<br/>
+		<br>
+		<br>
 		<div layout="row" layout-align="center center">
 			<div> <h1>ALL of them</h1></div>
 		</div>
@@ -16,7 +16,7 @@
 			Hyperrealism is a genre of painting and sculpture resembling a high resolution photograph. It is a fully-fledged school of art and can be considered as an advancement of Photorealism by the methods used to create the resulting photorealistic paintings or sculptures. The term is primarily applied to an independent art movement and art style in the United States and Europe that has recently developed since the early 2000s.
 				
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
@@ -28,4 +28,4 @@
 	      Next
 	    </md-button>
     </div>
-</md-dialog> 
+</md-dialog>
