--- a/thirdDime/static/js/funda/funda9.modal.html
+++ b/thirdDime/static/js/funda/funda9.modal.html
@@ -1,8 +1,8 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
+	<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
-		<br/>
-		<br/>
+		<br>
+		<br>
 		<div layout="row" layout-align="center center">
 			<div ng-show="result"> <h1>CORRECT !</h1></div>
 			<div ng-hide="result"> <h1>It is the third painting - Third of May</h1></div>
@@ -14,15 +14,15 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-					Artists are historians and their art the journal. Undeniably, art is not only an expression of beauty and creativity; it is also a reflection of the times.Events such as war impact artists even deeper. <br/>
-		The first painting is by Picasso where he depicts a massacre during the Korean war.<br/>
-		The second painting is by Otto Dix which represents a ruthless class struggle taking place in Germany.<br/>
-		The third painting is by Goya where he presents a scene from the Peninsular war.<br/>
-		The fourth painting is by Manet depicting the execution of Maximillian by a firing squad.<br/>
+					Artists are historians and their art the journal. Undeniably, art is not only an expression of beauty and creativity; it is also a reflection of the times.Events such as war impact artists even deeper. <br>
+		The first painting is by Picasso where he depicts a massacre during the Korean war.<br>
+		The second painting is by Otto Dix which represents a ruthless class struggle taking place in Germany.<br>
+		The third painting is by Goya where he presents a scene from the Peninsular war.<br>
+		The fourth painting is by Manet depicting the execution of Maximillian by a firing squad.<br>
 		Goya's painting is the original inspiration. 
 				
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
@@ -34,4 +34,4 @@
 	      Next
 	    </md-button>
     </div>
-</md-dialog> 
+</md-dialog>
