--- a/thirdDime/static/js/question/question.modal.html
+++ b/thirdDime/static/js/question/question.modal.html
@@ -1,11 +1,11 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #AC9D70;">
-    	<md-subheader class="md-sticky" style="background-color: #AC9D70;">
+	<md-content style="background-color: #AC9D70">
+    	<md-subheader class="md-sticky" style="background-color: #AC9D70">
     		<div layout="row">
-    		<i class="fa fa-paint-brush"> </i><div style="font-size: 1.17em; padding-left: 10px;">{{question}}</div>
+    		<i class="fa fa-paint-brush"> </i><div style="font-size: 1.17em; padding-left: 10px">{{question}}</div>
     		</div>
     	</md-subheader>
-    	<img style="margin: auto; max-width: 100%;" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    	<img style="margin: auto; max-width: 100%" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
     </md-content>
 <!--     <div class="md-actions" layout="row" layout-align="center center">
     	<md-button class="md-fab md-primary" ng-click="questionDialog()" aria-label="Question">
