--- a/thirdDime/static/js/funda/funda10.modal.html
+++ b/thirdDime/static/js/funda/funda10.modal.html
@@ -1,10 +1,10 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
-		<br/><br/>
+	<md-content style="background-color: {{color}}; color: white">
+		<br><br>
 	We hope you liked this experience. There is plenty more heading your ally. Meanwhile we would love to hear your thoughts on this painting. Give us a peek on our FB page. ;)
 	</md-content>
-	<div class="md-actions" layout="row" style="background-color: {{color}}; color: black;">
-	    <md-button href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank" style="color: black;">
+	<div class="md-actions" layout="row" style="background-color: {{color}}; color: black">
+	    <md-button href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank" style="color: black">
 	      Facebook
 	    </md-button>
   </div>
