--- a/thirdDime/static/js/funda/funda2.modal.html
+++ b/thirdDime/static/js/funda/funda2.modal.html
@@ -1,8 +1,8 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
+	<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
-		<br/>
-		<br/>
+		<br>
+		<br>
 		<div layout="row" layout-align="center center">
 			<div ng-show="result"> <h1>CORRECT !</h1></div>
 			<div ng-hide="result"> <h1>The Red Drapes</h1></div>
@@ -18,10 +18,10 @@
 This painting illustrates the iconographic and formal revolution that Caravaggio instigated in the late 16th and early 17th centuries.He took on the task of translating people's reality and emotions without worrying about the conventions of representations of the sacred. The scene is very realistic, the body of the Virgin is not sacred except for the fine aureole at the top of its head. The painting fetched Caravaggio a lot of ridicule especially from the Church.
 				</p>
 				<div layout="row" layout-align="center center">
-		        	<img style="margin: 10px; max-width: 100%;" src="/static/images/virgin_funda.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+		        	<img style="margin: 10px; max-width: 100%" src="/static/images/virgin_funda.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
 		        </div>
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
