--- a/thirdDime/static/js/funda/funda4.modal.html
+++ b/thirdDime/static/js/funda/funda4.modal.html
@@ -1,8 +1,8 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
+	<md-content style="background-color: {{color}}; color: white">
 		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
-		<br/>
-		<br/>
+		<br>
+		<br>
 		<div layout="row" layout-align="center center">
 			<div ng-show="result"> <h1>CORRECT !</h1></div>
 			<div ng-hide="result"> <h1>One with the Queen and her children</h1></div>
@@ -15,14 +15,14 @@
 			<span flex="15"></span>
 			<span flex="70">
 				<p><strong>In the third painting everything from the Queen's appearence to the surrounding potrays the Queen as a plain, no fuss lady. The children are central in the attempt to garner empathy.</strong></p>
-				<p>The first portrait shows the Queen as a fashionista with a bold actressy pose. Her dress, wig, everything about her is magnificent and clearly a testimony of her stature and power. The room has large stage curtains, the Queen has her hand on a globe, a symbol of her dominion on large territories. <br/>
+				<p>The first portrait shows the Queen as a fashionista with a bold actressy pose. Her dress, wig, everything about her is magnificent and clearly a testimony of her stature and power. The room has large stage curtains, the Queen has her hand on a globe, a symbol of her dominion on large territories. <br>
 
-The second portrait shows the Queen in a plain English muslin dress with a straw hat. Quite ordinary, one would say and may be an attempt to relate to the general masses. But a Queen who shows herself like this in public is insulting the people and France. <br/>
+The second portrait shows the Queen in a plain English muslin dress with a straw hat. Quite ordinary, one would say and may be an attempt to relate to the general masses. But a Queen who shows herself like this in public is insulting the people and France. <br>
 
 In the third painting the Queen is shown with her children in an austere surrounding. She is dressed in red velvet, authoritative but not extravagant. She is wearing no jewellery, a wise move given her nickname ‘Madame Deficit’. Her portrayal as a mother is also an attempt to garner empathy from the citizenry.
 				</p>
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
@@ -34,4 +34,4 @@ In the third painting the Queen is shown with her children in an austere surroun
 	      Next
 	    </md-button>
     </div>
-</md-dialog> 
+</md-dialog>
