--- a/thirdDime/static/js/funda/funda5.modal.html
+++ b/thirdDime/static/js/funda/funda5.modal.html
@@ -1,8 +1,8 @@
 <md-dialog aria-label="Mango (Fruit)" class="funda">
-	<md-content style="background-color: {{color}}; color: white;">
-		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)" style="color: white;">Close</md-button></div>
-		<br/>
-		<br/>
+	<md-content style="background-color: {{color}}; color: white">
+		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)" style="color: white">Close</md-button></div>
+		<br>
+		<br>
 		<div layout="row" layout-align="center center">
 			<div ng-show="result"> <h1>CORRECT !</h1></div>
 			<div ng-hide="result"> <h1>The Skull</h1></div>
@@ -17,13 +17,13 @@
 			When we turn this painting, the rich trappings fade out and the ultimate victor comes into focus. Death eclipses everything.
 				
 				<div layout="row" layout-align="center center">
-		        	<img style="margin: 10px; max-width: 100%;" src="/static/images/amb.gif" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+		        	<img style="margin: 10px; max-width: 100%" src="/static/images/amb.gif" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
 		        </div>
 		       Well almost everything. There is a hidden crucifx in the painting .
 Holbein raises another question through this painting. is death really
 the ultimate victor ?
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
@@ -35,4 +35,4 @@ the ultimate victor ?
 	      Next
 	    </md-button>
     </div>
-</md-dialog> 
+</md-dialog>
