--- a/thirdDime/static/js/intro/intro.modal.html
+++ b/thirdDime/static/js/intro/intro.modal.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: {{color}}; color: white;">
-		<br/>
-		<br/>
+	<md-content style="background-color: {{color}}; color: white">
+		<br>
+		<br>
 		<div layout="row" layout-align="center center" align="right">
 			<span flex="15"><i class="fa fa-quote-left"></i></span>
 			<span flex="85"></span>
@@ -11,7 +11,7 @@
 			<span flex="70">
 				<h3>{{intro}}</h3>
 			</span>
-			<span flex="15"></i></span>
+			<span flex="15"></span>
 		</div>
 		<div layout="row" layout-align="center center">
 			<span flex="85"></span>
@@ -19,7 +19,7 @@
 		</div>
 	</md-content>
 	<div class="md-actions" layout="row" layout-align="center center">
-		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question" style="font-weight: bold;">
+		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question" style="font-weight: bold">
 	      Dive
 	    </md-button>
 </div>
