--- a/thirdDime/static/js/question/question1.modal.html
+++ b/thirdDime/static/js/question/question1.modal.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="question.style.css">
-<md-dialog aria-label="Mango (Fruit)"  class="que">
-	<md-content style="background-color: {{color}};">
-    	<md-subheader class="md-sticky" style="background-color: {{color}};">
+<md-dialog aria-label="Mango (Fruit)" class="que">
+	<md-content style="background-color: {{color}}">
+    	<md-subheader class="md-sticky" style="background-color: {{color}}">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
@@ -9,11 +9,11 @@
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from the options below</div>
-        <div layout="row" layout-align="end center" >
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer1('cypress')" style="box-shadow: 0px 0px 0px 5px #000, 0px 0px 0px 10px #fff;"/>
-            <div flex="20" >
-                <md-radio-group >
+        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
+        <div layout="row" layout-align="end center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer1('cypress')" style="box-shadow: 0px 0px 0px 5px #000, 0px 0px 0px 10px #fff">
+            <div flex="20">
+                <md-radio-group>
                     <md-radio-button value="Church" aria-label="Label 1" ng-click="answer1('church')">Church</md-radio-button>
                     <md-radio-button value="Constellation" aria-label="Label 2" ng-click="answer1('constellation')"> Constellation </md-radio-button>
                     <md-radio-button value="Cypress Tree" aria-label="Label 3" ng-click="answer1('cypress')">Cypress Tree</md-radio-button>
@@ -23,4 +23,3 @@
         </div>
     </md-content>
 </md-dialog>
-
