--- a/thirdDime/static/js/question/question10.modal.html
+++ b/thirdDime/static/js/question/question10.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)" class="que">
-  <md-content style="background-color: {{color}};">
-        <img style="margin: 10px; max-width: 100%;" src="/static/images/thoughts.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer10()" />
+  <md-content style="background-color: {{color}}">
+        <img style="margin: 10px; max-width: 100%" src="/static/images/thoughts.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer10()">
   </md-content>
 </md-dialog>
