--- a/thirdDime/static/js/question/question2.modal.html
+++ b/thirdDime/static/js/question/question2.modal.html
@@ -1,6 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)"  class="que">
-	<md-content style="background-color: {{color}};">
-    	<md-subheader class="md-sticky" style="background-color: {{color}};">
+<md-dialog aria-label="Mango (Fruit)" class="que">
+	<md-content style="background-color: {{color}}">
+    	<md-subheader class="md-sticky" style="background-color: {{color}}">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
@@ -8,11 +8,11 @@
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from the options below</div>
+        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
         <div layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer2('Drapes')">
-            <div flex="20" >
-                <md-radio-group >
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer2('Drapes')">
+            <div flex="20">
+                <md-radio-group>
                     <md-radio-button value="Girl in front" aria-label="Label 1" ng-click="answer2('Girl')">Girl in front</md-radio-button>
                     <md-radio-button value="Drapes" aria-label="Label 2" ng-click="answer2('Drapes')"> Drapes </md-radio-button>
                     <md-radio-button value="Man in center" aria-label="Label 3" ng-click="answer2('Man')">Man in center</md-radio-button>
@@ -21,4 +21,3 @@
         </div>
     </md-content>
 </md-dialog>
-
