--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -1,6 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)"  class="que">
-	<md-content style="background-color: {{color}};">
-    	<md-subheader class="md-sticky" style="background-color: {{color}};">
+<md-dialog aria-label="Mango (Fruit)" class="que">
+	<md-content style="background-color: {{color}}">
+    	<md-subheader class="md-sticky" style="background-color: {{color}}">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
@@ -8,11 +8,11 @@
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end left" style="font-size: .77em;">Choose from options below.</div>
-        <div layout="row" layout-align="end center" >
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" >
-            <div flex="20" >
-                <md-radio-group >
+        <div layout="row" layout-align="end left" style="font-size: .77em">Choose from options below.</div>
+        <div layout="row" layout-align="end center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
+            <div flex="20">
+                <md-radio-group>
                     <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
                     <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer3('two')"> Relativity's idea of time </md-radio-button>
                     <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer3('three')">Dream state</md-radio-button>
@@ -23,4 +23,3 @@
         
     </md-content>
 </md-dialog>
-
