--- a/thirdDime/static/js/question/question4.modal.html
+++ b/thirdDime/static/js/question/question4.modal.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)" class="que">
-  <md-content style="background-color: {{color}};">
-    <md-subheader class="md-sticky" style="background-color: {{color}};">
+  <md-content style="background-color: {{color}}">
+    <md-subheader class="md-sticky" style="background-color: {{color}}">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
@@ -8,8 +8,8 @@
                 </div>
         </div>
       </md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Click any painting to select.</div>
-  	<md-tabs md-selected="data.selectedIndex" >
+        <div layout="row" layout-align="end center" style="font-size: .77em">Click any painting to select.</div>
+  	<md-tabs md-selected="data.selectedIndex">
       <md-tab id="tab1" aria-controls="tab1-content">
         By Lebrun (1783)
       </md-tab>
@@ -21,14 +21,14 @@
       </md-tab>
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
-        <div id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center" >
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/marrie1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1783')" />
+        <div id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1783')">
         </div>
         <div id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/marrie2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1775')" />
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1775')">
         </div>
         <div id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1787')" />
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer4('1787')">
         </div>
     </ng-switch>
   </md-content>
