--- a/thirdDime/static/js/question/question5.modal.html
+++ b/thirdDime/static/js/question/question5.modal.html
@@ -1,6 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)"  class="que">
-	<md-content style="background-color: {{color}};">
-    	<md-subheader class="md-sticky" style="background-color: {{color}};">
+<md-dialog aria-label="Mango (Fruit)" class="que">
+	<md-content style="background-color: {{color}}">
+    	<md-subheader class="md-sticky" style="background-color: {{color}}">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
@@ -8,11 +8,11 @@
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from the options below</div>
-        <div layout="row" layout-align="center center" >
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-            <div flex="20" >
-                <md-radio-group >
+        <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
+        <div layout="row" layout-align="center center">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
+            <div flex="20">
+                <md-radio-group>
                     <md-radio-button value="God in shadows" aria-label="Label 1" ng-click="answer5('one')">God in shadows</md-radio-button>
                     <md-radio-button value="Wealth and Authority" aria-label="Label 2" ng-click="answer5('two')"> Wealth and Authority </md-radio-button>
                     <md-radio-button value="Death" aria-label="Label 4" ng-click="answer5('three')">Death</md-radio-button>
@@ -22,4 +22,3 @@
         </div>
     </md-content>
 </md-dialog>
-
