--- a/thirdDime/static/js/question/question6.modal.html
+++ b/thirdDime/static/js/question/question6.modal.html
@@ -1,6 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)"  class="que">
-  <md-content style="background-color: {{color}};">
-    <md-subheader class="md-sticky" style="background-color: {{color}};">
+<md-dialog aria-label="Mango (Fruit)" class="que">
+  <md-content style="background-color: {{color}}">
+    <md-subheader class="md-sticky" style="background-color: {{color}}">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
@@ -8,7 +8,7 @@
                 </div>
         </div>
       </md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Options at bottom.</div>
+        <div layout="row" layout-align="end center" style="font-size: .77em">Options at bottom.</div>
   	<md-tabs md-selected="data.selectedIndex">
       <md-tab id="tab1" aria-controls="tab1-content">
         Item One
@@ -25,10 +25,10 @@
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
         <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/test1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/test1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
           <div flex="20">
             <div layout="column">
-              <div flex ng-show="showResult61"><br/><br/>
+              <div flex ng-show="showResult61"><br><br>
                 <div ng-show="result61"><h1>CORRECT !</h1></div>
                 <div ng-hide="result61"><h1>It is FUTURISM</h1></div>
               </div>
@@ -42,10 +42,10 @@
           </div>
         </div>
         <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%;" src="/static/images/test2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/test2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
           <div flex="20">
             <div layout="column">
-              <div flex ng-show="showResult62"><br/><br/>
+              <div flex ng-show="showResult62"><br><br>
                 <div ng-show="result62"><h1>CORRECT !</h1></div>
                 <div ng-hide="result62"><h1>It is FAUVISM</h1></div>
               </div>
@@ -59,10 +59,10 @@
           </div>
         </div>
         <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: 10px; max-width: 100%;" src="/static/images/test3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+          <img style="margin: 10px; max-width: 100%" src="/static/images/test3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
           <div flex="20">
             <div layout="column">
-              <div flex ng-show="showResult63"><br/><br/>
+              <div flex ng-show="showResult63"><br><br>
                 <div ng-show="result63"><h1>CORRECT !</h1></div>
                 <div ng-hide="result63"><h1>It is IMPRESSIONISM</h1></div>
               </div>
@@ -76,10 +76,10 @@
           </div>
         </div>
         <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: 10px; max-width: 100%;" src="/static/images/test4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+          <img style="margin: 10px; max-width: 100%" src="/static/images/test4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
           <div flex="20">
             <div layout="column">
-              <div flex ng-show="showResult64"><br/><br/>
+              <div flex ng-show="showResult64"><br><br>
                 <div ng-show="result64"><h1>CORRECT !</h1></div>
                 <div ng-hide="result64"><h1>It is CUBISM</h1></div>
               </div>
