Adding analytics to inro tabs of quizes

--- a/thirdDime/static/js/intro/intro.modal.html
+++ b/thirdDime/static/js/intro/intro.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: {{color}}; color: white">
+	<md-content style="background-color: {{color}}; color: white" analytics-on="hover"  analytics-event="Intro{{index}}">
 		<br>
 		<br>
 		<div layout="row" layout-align="center center" align="right">
