Making images in first two questions non-clickable.

--- a/thirdDime/static/js/question/question2.modal.html
+++ b/thirdDime/static/js/question/question2.modal.html
@@ -10,7 +10,7 @@
     	</md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
         <div layout="row" layout-align="center center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer2('Drapes')">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)">
             <div flex="20">
                 <md-radio-group>
                     <md-radio-button value="Girl in front" aria-label="Label 1" ng-click="answer2('Girl')">Girl in front</md-radio-button>
