--- a/thirdDime/static/js/question/question1.modal.html
+++ b/thirdDime/static/js/question/question1.modal.html
@@ -11,7 +11,7 @@
     	</md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em">Choose from the options below</div>
         <div layout="row" layout-align="end center">
-        	<img style="margin: 10px; max-width: 100%" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" ng-click="answer1('cypress')" style="box-shadow: 0px 0px 0px 5px #000, 0px 0px 0px 10px #fff">
+        	<img style="margin: 10px; max-width: 100%" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this)" style="box-shadow: 0px 0px 0px 5px #000, 0px 0px 0px 10px #fff">
             <div flex="20">
                 <md-radio-group>
                     <md-radio-button value="Church" aria-label="Label 1" ng-click="answer1('church')">Church</md-radio-button>
