Adding back navigation to quiz.

--- a/thirdDime/static/js/funda/funda2.modal.html
+++ b/thirdDime/static/js/funda/funda2.modal.html
@@ -29,6 +29,9 @@ This painting illustrates the iconographic and formal revolution that Caravaggio
 		</div>
 	</md-content>
 	<div class="md-actions" layout="row">
+	    <md-button ng-click="goBack()" class="md-primary">
+	      Back
+	    </md-button>
 	    <md-button ng-click="fundaRoot(true)" class="md-primary">
 	      Next
 	    </md-button>
