--- a/thirdDime/static/js/funda/funda6.modal.html
+++ b/thirdDime/static/js/funda/funda6.modal.html
@@ -24,6 +24,9 @@ The <b>Fauve</b> painters were the first to break with Impressionism as well as 
 		</div>
 	</md-content>
 	<div class="md-actions" layout="row">
+	    <md-button ng-click="goBack()" class="md-primary">
+	      Back
+	    </md-button>
 	    <md-button ng-click="fundaRoot(true)" class="md-primary">
 	      Next
 	    </md-button>
