--- a/thirdDime/static/js/funda/funda3.modal.html
+++ b/thirdDime/static/js/funda/funda3.modal.html
@@ -21,6 +21,9 @@
 			</div>
 		</md-content>
 		<div class="md-actions" layout="row">
+		    <md-button ng-click="goBack()" class="md-primary">
+		      Back
+		    </md-button>
 		    <md-button ng-click="fundaRoot(true)" class="md-primary">
 		      Next
 		    </md-button>
