--- a/thirdDime/static/js/funda/funda9.modal.html
+++ b/thirdDime/static/js/funda/funda9.modal.html
@@ -30,6 +30,9 @@
 		</div>
 	</md-content>
 	<div class="md-actions" layout="row">
+	    <md-button ng-click="goBack()" class="md-primary">
+	      Back
+	    </md-button>
 	    <md-button ng-click="fundaRoot(true)" class="md-primary">
 	      Next
 	    </md-button>
